# Attempt_three

./: .gitignore  Dummy_Profile_Examples.xlsx  LICENSE  README.md  main_2.ipynb  master_dataset.csv  pyproject.toml  requirements.txt
Implementation/: competency_score_evaluation.md  competency_scoring_issues_and_limitations.md  competency_scoring_module_guide.md  competency_scoring_reasoning_steps.md  final_competency_dataset.md  folder_restructure_after_mvp.md  generating_dummy_data_implementation_review.md  llm_biography_normalization_stage.md  main_2_notebook_explained.md  python_version_and_ci_configuration.md  skill_specific_profile_generator.md  workflow_evolution_story.md
generating synthetic results/: dummy_profiles 1.xlsx  generate_synthetic_workbook.py  synthetic_staff_talentlink_examples.xlsx  synthetic_staff_talentlink_examples_v2.xlsx  synthetic_staff_talentlink_examples_v6.xlsx  synthetic_staff_talentlink_v10.xlsx  synthetic_staff_talentlink_v11.xlsx  synthetic_staff_talentlink_v4.xlsx  synthetic_staff_talentlink_v6.xlsx  synthetic_staff_talentlink_v7.xlsx
notebooks/: final_competency_analysis.ipynb  main_2.ipynb
src/: __init__.py  biography_dataset.py  competency_scoring.py  config.py  data_loader.py  evaluation.py  final_competency_dataset.py  generate_synthetic_workbook.py  llm_normalizer.py  logging_utils.py  main.py  run_biography_pipeline.py  run_evaluation.py  run_final_competency_dataset.py  run_job_history_pipeline.py  skill_extraction.py  skill_references.py  skill_specific_profile.py  skill_taxonomy.py  synthesis.py  text_preprocessing.py
(+40 files in other folders)
