[project]
name = "skill-competency-calculator"
version = "0.1.0"
description = "Synthetic workbook generator for skill and competency data."
requires-python = ">=3.12,<3.15"

dependencies = [
    "Faker",
    "numpy",
    "openai",
    "openpyxl",
    "pandas",
    "polars",
    "scikit-learn",
    "sentence-transformers",
]

[tool.pytest.ini_options]
pythonpath = ["."]
